--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -216,7 +216,7 @@
   .text-h4 {
     font-size: 16px;
     line-height: 120%;
-    letter-spacing: 0%;
+    /* letter-spacing: 0%; */
   }
 
   /* Body 1 Styles */
@@ -253,7 +253,7 @@
   .text-caption-1 {
     font-size: 13px;
     line-height: 150%;
-    letter-spacing: 0%;
+    /* letter-spacing: 0%; */
   }
 
   /* Caption 2 Styles */
